--- a/docs/_posts/2022-07-27-day3.markdown
+++ b/docs/_posts/2022-07-27-day3.markdown
@@ -11,3 +11,9 @@ setting up the blog again.
 WS: two basic sites built to refresh the memory.  
 NN: working through the python problems.  
 SS: trivia questions? why trivia?  
+
+
+
+27/07/2022 - day 3, the key word for this semester looks like "teamwork", hmm.
+today was 'prof-skills', at least the lecture was only 1hr this time.>
+first workshop this friday. NN, SS, and WS tutes begin next week.>
